Created a script that parsese rule.hpp and populates the webtool
- Also prettyfied the web tool

--- a/configgen/index.html
+++ b/configgen/index.html
@@ -7,9 +7,14 @@
   <div id="main">
     <h3>Available rules</h3>
     <div id="rules">
+      <span class="one title">Rule name</span>
+      <span class="checkbox title"></span>
+      <span class="other title">Scope</span>
+      <span class="other title">Parameter</span>
     </div>
     
-    <button id="export">Export to json</button>
+    <button id="export">Export to json</button> 
+    <button id="select_all">Select all</button>
   </div>
   <script src="populate.js"></script>
 </body>
